<?xml version="1.0" encoding="utf-8"?>
<!--
© Robert Williamson 2014-2018.
This program is distributed under the terms of the GNU General Public License.
-->
<resources>

    <string name="app_name">Healthy Esther</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Esther\'s Health App</string>
    <string name="title_log_events">Log events</string>
    <string name="title_review_events">Review events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">Add</string>
    <string name="meal">Meal</string>
    <string name="medication">Medication</string>
    <string name="log_an_event">Log an event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_title">Event title</string>
    <string name="when">When</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="dish">Dish</string>
    <string name="note">Note</string>
    <string name="descriptive_name_for_the_dish">Please enter a name for the dish</string>
    <string name="descriptive_name_for_the_note">Please enter a name for the note</string>
    <string name="descriptive_name_for_the_note_detail">Optional note detail</string>
    <string name="could_not_get_autocomplete_text_for_meals">Could not get auto-completion text for meal names.</string>
    <string name="could_not_get_autocomplete_text_for_medication">Could not get auto-completion text for medication names.</string>
    <string name="could_not_get_autocomplete_text_for_notes">Could not get auto-completion text for note names.</string>
    <string name="could_not_insert_meal_event">Could not insert meal event.</string>
    <string name="could_not_insert_medication_event">Could not insert medication event.</string>
    <string name="could_not_insert_note_event">Could not insert note event.</string>
    <string name="enter_medication_name">Please enter the medication\'s name</string>
    <string name="log_a_meal">Log a meal</string>
    <string name="log_medication">Log medication</string>
    <string name="activity_last_week">Last week\'s entries</string>
    <string name="action_backup_to_dropbox">Backup data to Dropbox</string>
    <string name="action_restore_from_dropbox">Restore data from Dropbox</string>
    <string name="confirm_restore_from_dropbox_title">Confirm Restore</string>
    <string name="confirm_restore_from_dropbox_message">This will replace ALL your existing data.</string>
    <string name="could_not_get_score_type_list">Could not get the list of score types.</string>
    <string name="health_score">Health Score</string>
    <string name="score_name">Score Name</string>
    <string name="descriptive_name_for_the_score">Please enter a name for the score</string>
    <string name="could_not_insert_health_score_event">Could not insert health score event.</string>
    <string name="hide_score">Hide Score</string>
    <string name="hide">Hide</string>
    <string name="general">General</string>
    <string name="hidden_scores">Hidden Scores</string>
    <string name="hidden_scores_summary">The following scores are currently hidden.</string>
    <string name="show_hidden_scores">Show Hidden Scores</string>
    <string name="scores">Scores</string>
    <string name="hidden">Hidden</string>
    <string name="shown">Shown</string>
    <string name="track_another_score">Track another score</string>
    <string name="best_value">Best value</string>
    <string name="ask_about_this_periodically">Ask about this value periodically?</string>
    <string name="minimum_value_name">Minimum value name</string>
    <string name="minimum_value_name_hint">eg. "sad"</string>
    <string name="maximum_value_name">Maximum value name</string>
    <string name="maximum_value_name_hint">eg. "happy"</string>
    <string name="edit">Edit</string>

    <string name="reminder_content_title">Healthy Esther</string>
    <string name="reminder_content">How are you feeling? Have you eaten? Taken medication?</string>
    <string name="reminder_ticker">How are you?</string>
    <string name="get_more">Get more</string>
    <string name="getting_more">Getting more…</string>
    <string name="event_icon_content_description">Image indicating the type of event displayed.</string>
    <string name="event_date_time_format">yyyy-MM-dd HH:mm:ss</string>

    <string name="dropbox">Dropbox</string>
    <string name="read_contacts_permission_explanation">The Read Contacts permission is needed to name the database file after your Google email address.</string>
    <string name="read_contacts_permission_granted">Read Contacts permission granted</string>
    <string name="read_contacts_permission_denied">Read Contacts permission denied</string>
    <string name="dropbox_sync_failed">Dropbox synchronization failed.</string>
    <string name="title_activity_about">About</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="about">About</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="now">now</string>
    <string name="type">type</string>
    <string name="name">name</string>

</resources>
