<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.contentLayout"
    android:orientation="vertical">

    <LinearLayout
        style="@style/AppTheme.sectionLayout"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.text.title"
            android:text="@string/log_an_event" />

        <Button
            android:id="@+id/create_meal_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal" />

        <Button
            android:id="@+id/create_medication_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medication" />

        <Button
            android:id="@+id/create_health_score_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_score" />

        <Button
            android:id="@+id/create_note_event_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

    </LinearLayout>

</LinearLayout>
