<?xml version="1.0" encoding="utf-8"?>
<!--
© Robert Williamson 2014-2018.
This program is distributed under the terms of the GNU General Public License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.contentLayout"
    android:orientation="vertical">

    <include layout="@layout/enter_value_name" />

    <LinearLayout style="@style/AppTheme.sectionLayout">

        <Switch
            android:id="@+id/random_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_about_this_periodically" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.sectionLayout"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.text"
            android:text="@string/minimum_value_name" />

        <EditText
            android:id="@+id/min_label"
            style="@style/AppTheme.text.textEditor"
            android:hint="@string/minimum_value_name_hint" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.sectionLayout"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.text"
            android:text="@string/maximum_value_name" />

        <EditText
            android:id="@+id/max_label"
            style="@style/AppTheme.text.textEditor"
            android:hint="@string/maximum_value_name_hint" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.sectionLayout"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/best_value_title"
                style="@style/AppTheme.text"
                android:layout_gravity="start"
                android:text="@string/best_value" />

            <TextView
                android:id="@+id/best_value_current_value"
                style="@style/AppTheme.text"
                android:layout_gravity="end" />

            <com.robwilliamson.healthyesther.widget.MultiRangePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <SeekBar
            android:id="@+id/best_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
